# lynlang

./: .gitignore  ALIGNMENT_REPORT.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  CODEGEN_GEP_AUDIT.md  CODEGEN_PHI_NODES.md  CODE_ORGANIZATION.md  COMPILER_REVIEW.md  CONTRIBUTING.md  CURRENT_STATUS.md  Cargo.toml  DESIGN_NOTES.md  DOCUMENTATION_INDEX.md  EXAMPLES_FIXES.md  FEATURE_SUMMARY.md  FINAL_STATUS.md  GENERICS_IMPROVEMENTS.md  GENERICS_STATUS_2025_09_26.md  GENERIC_IMPROVEMENTS.md  GENERIC_STATUS.md  IMMEDIATE_NEXT_STEPS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GAP_ANALYSIS.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_REALITY.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_REPORT_FINAL.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_STATUS_2025.md  IMPLEMENTATION_STATUS_FINAL.md  IMPLEMENTATION_SUMMARY.md  INTRINSICS_REFERENCE.md  KNOWN_ISSUES.md  LANGUAGE_SPEC.md  LANGUAGE_SPEC.zen  LANGUAGE_SPEC_DEMO.zen  LANGUAGE_SPEC_FINAL_REPORT.md  LANGUAGE_SPEC_IMPLEMENTATION.md  LANGUAGE_SPEC_STATUS.md  (+451 more)
.agent/: ARCHITECTURAL_CLEANUP_REPORT.md  CURRENT_FOCUS.md  GENERICS_IMPROVEMENTS.md  GENERIC_TYPE_STATUS.md  LSP_STATUS.md  RAISE_ISSUE_ANALYSIS.md  SESSION_2025_10_08.md  STATUS_2025-09-25_VERIFIED.md  STATUS_REPORT_2025-09-25.md  STATUS_REPORT_2025_09_27.md  TEST_SUITE_IMPROVEMENTS_2025-09-24.md  actual_feature_parity.md  allocator_and_collection_analysis.md  analysis_nested_issue.md  architecture_documentation.md  attempts.md  context.md  disabled_tests_analysis.md  focus.md  generic_improvements_2025-09-26.md  generic_improvements_summary.md  generic_improvements_summary_2025_09_26.md  generic_type_analysis.md  generic_type_system_status.md  generics_improvement_report.md  generics_improvements_2025-09-26.md  generics_progress.md  global_memory.md  import_system_documentation.md  improvements_2025-09-26.md  lsp_100_percent_achievement.md  lsp_100_percent_complete.md  lsp_100_percent_verified.md  lsp_assessment_2025_10_05.md  lsp_background_diagnostics_2025_10_05.md  lsp_diagnostics_integration_2025_10_05.md  lsp_enhancement_2025-10-05_part2.md  lsp_enhancement_progress_2025-10-05.md  lsp_enhancements_2025-09-30.md  lsp_features_comprehensive.md  (+54 more)
.claude/: project_map.md  ralph-loop.local.md  worker.md
agent/: context.md  focus.md  generic_improvements_summary.md  prompt.md  ralph.sh
bootstrap/: compiler.zen  hello_self_host.zen  hello_zen_compiler  hello_zen_compiler.ll  hello_zen_compiler.zen  minimal_compiler.zen  minimal_zen_compiler.zen  simple_zen_compiler.zen  test_bootstrap.zen  zen_bootstrap.zen  zen_compiler.zen
compiler/: c_backend.zen  codegen.zen  codegen_llvm.zen  codegen_simple.zen  errors.zen  lexer.zen  lexer_enhanced.zen  lexer_selfhost.zen  lexer_simple.zen  llvm_backend.zen  main.zen  parser.zen  parser_enhanced.zen  parser_selfhost.zen  type_checker.zen  zen_compiler.zen  zenc.zen
demos/: simple_demo  simple_demo.ll  simple_demo.zen
design/: ARCHITECTURE.md  NEXT_STEPS.md  PRIMITIVES_VS_FEATURES.md  SAFE_POINTERS_DESIGN.md  STDLIB_ARCHITECTURE_REVIEW.md  STDLIB_DESIGN.md  STDLIB_IMPLEMENTATION_ROADMAP.md  STDLIB_WORK_BREAKDOWN.md  bootstrap.sh
docs/: ARCHITECTURE.md  DOCUMENTATION_INDEX.md  ERROR_BUBBLING_BEST_PRACTICES.md  ERROR_BUBBLING_COMPLETE_GUIDE.md  ERROR_BUBBLING_COMPREHENSIVE.md  ERROR_BUBBLING_GUIDE.md  ERROR_BUBBLING_GUIDE_COMPLETE.md  ERROR_BUBBLING_PATTERNS.md  ERROR_BUBBLING_WITHOUT_TRY.md  ERROR_HANDLING_PATTERNS.md  ERROR_HANDLING_WITHOUT_TRY.md  GENERIC_CUSTOM_ENUM_FIX.md  GENERIC_IMPROVEMENTS_2025.md  GENERIC_IMPROVEMENTS_SUMMARY.md  GENERIC_SYSTEM_ANALYSIS.md  GENERIC_TYPES.md  IMPORT_SYSTEM.md  (+44 more)
(+2326 files in other folders)
